Fix images size overlap

--- a/styles.css
+++ b/styles.css
@@ -140,6 +140,8 @@ header {
   border-radius: 14px;
   width: 150px;
   height: 150px;
+  max-width: 150px;
+  max-height: 150px;
   margin: 0;
 }
 
